# tensorflow_cpp_test

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.3EB341CD68AED147.idx
model/: mscn.pt  test.py  train.py
model/mscn/: data.py  mscn.pt  tfdata.py  tfmodel.py
model/mscn/tfmodel/: saved_model.pb
model/mscn/tfmodel/variables/: variables.index
model/results/: predictions_job-light.csv
